# geany-livediff

./: .gitignore  CMakeLists.txt  README.md  cache_util.cpp  cache_util.h  cached_document.cpp  cached_document.h  cached_document_git.cpp  cached_document_git.h  config.h.cmake  main.cpp
